--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <h2>My itinerary</h2>
     <div id="itinerary"></div>
 
-
+    <script src="scripts/ebrite.js"></script>
     <script src="scripts/domBuilder.js"></script>
     
 </body>
